--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.name %></td>
-        <td><%= book.release_date %></td>
+        <td><%= book.release_date_display %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
